--- a/runtime/mini/ChangeLog
+++ b/runtime/mini/ChangeLog
@@ -21,6 +21,271 @@
 
 	* debug-debugger.h (MonoDebuggerInfo): Added `debugger_version'.
 
+2007-08-01  Zoltan Varga  <vargaz@gmail.com>
+
+	* mini-amd64.h (MONO_INIT_CONTEXT_FROM_FUNC): Avoid using 
+	__builtin_frame_address () since it is broken on older gcc versions.
+
+Tue Jul 31 17:34:42 CEST 2007 Paolo Molaro <lupus@ximian.com>
+
+	* mini.c, mini.h, mini-exceptions.c: added a bit of documentation
+	on the stack overflow handling and made the managed stack overflows
+	catchable in most cases using soft guard pages.
+	* exceptions-x86.c: added code to restore the protection in the soft
+	guard pages at the end of exception handling.
+
+2007-07-31  Zoltan Varga  <vargaz@gmail.com>
+
+	* mini.c (SIG_HANDLER_SIGNATURE): Fix a warning.
+
+Mon Jul 30 17:43:13 CEST 2007 Paolo Molaro <lupus@ximian.com>
+
+	* exceptions-ppc.c, mini-ppc.h: arch-specific stack overflow
+	exception handling.
+
+Mon Jul 30 17:38:13 CEST 2007 Paolo Molaro <lupus@ximian.com>
+
+	* mini-alpha.h, mini-ia64.h, mini-sparc.h: disable the altstack
+	signal handling support until it has been ported to the new mechanism.
+	* mini.c: fixed stack overflow detection and use the new
+	architecture code  to handle signals on the altstack.
+
+Mon Jul 30 17:33:02 CEST 2007 Paolo Molaro <lupus@ximian.com>
+
+	* exceptions-amd64.c, mini-amd64.h: amd64 code to handle
+	stack overflows on the alt stack.
+
+Mon Jul 30 17:29:56 CEST 2007 Paolo Molaro <lupus@ximian.com>
+
+	* exceptions-x86.c, mini-x86.h, mini.h: new code to handle
+	stack overflows on the alt stack.
+
+Mon Jul 30 11:50:06 CEST 2007 Paolo Molaro <lupus@ximian.com>
+
+	* exceptions-ppc.c: cleanup preparing for altstack support.
+
+Mon Jul 30 11:31:24 CEST 2007 Paolo Molaro <lupus@ximian.com>
+
+	* exceptions-arm.c: cleanup preparing for altstack support.
+
+2007-07-27  Mark Probst  <mark.probst@gmail.com>
+
+	* mini.c (print_jit_stats): Output hazard pointer stats.
+
+2007-07-26  Mark Probst  <mark.probst@gmail.com>
+
+	* driver.c, mini.c: Replaced security mode flags with a single
+	enum variable.
+
+Thu Jul 26 20:12:12 CEST 2007 Paolo Molaro <lupus@ximian.com>
+
+	* mini.c, mini-exceptions.c: cleanup the sigaltstack code.
+
+2007-07-25  Mark Probst  <mark.probst@gmail.com>
+
+	* mini.c, mini.h, driver.c (mono_main): Added command-line flag
+	(which doesn't do anything yet) for activating Core CLR
+	(Silverlight) security.
+
+Tue Jul 24 21:16:17 CEST 2007 Paolo Molaro <lupus@ximian.com>
+
+	* mini-codegen.c: work around a possible gcc bug on arm.
+
+Tue Jul 24 17:20:19 CEST 2007 Paolo Molaro <lupus@ximian.com>
+
+	* driver.c, mini-x86.h, mini-amd64.h: print a nice error
+	message for platforms that don't support AOT compilation.
+
+Mon Jul 23 10:29:29 CEST 2007 Paolo Molaro <lupus@ximian.com>
+
+	* mini.h, mini.c, driver.c: temporary smcs hack.
+
+Mon Jul 23 09:29:34 CEST 2007 Paolo Molaro <lupus@ximian.com>
+
+	* mini-arm.h, mini-arm.c: arm EABI fixes.
+
+2007-07-22  Zoltan Varga  <vargaz@gmail.com>
+
+	* exceptions-x86.c (mono_arch_find_jit_info): Handle the lmf->method == NULL
+	case.
+
+	* tramp-x86.c (mono_arch_create_trampoline_code): Only set lmf->method for
+	trampolines taking a method argument.
+
+	* mini-x86.h (MonoLMF): Add an 'esp' field plus comments.
+
+	* mini-x86.c (mono_arch_emit_prolog): Update after changes to the LMF structure.
+	* tramp-x86.c (mono_arch_create_trampoline_code): Ditto.
+
+	* exceptions-x86.c (mono_arch_get_jit_info): Properly clean up the stack after
+	JIT compilation throws an exception. Fixes #82050.
+
+2007-07-19  Mark Probst  <mark.probst@gmail.com>
+
+	* mini.c: Removed the MonoLoaderErrorKind enum and replaced it
+	with the MONO_EXCEPTION_ defines.
+
+2007-07-17  Zoltan Varga  <vargaz@gmail.com>
+
+	* mini-amd64.c (mono_arch_find_imt_method): Handle mov reg,IMM64 case. Fixes
+	#82117.
+	
+	* mini-amd64.c (mono_arch_find_imt_method): Add some debug code to help find out
+	the cause of an assertion.
+
+Mon Jul 16 19:31:21 CEST 2007 Paolo Molaro <lupus@ximian.com>
+
+	* mini.c, jit-icalls.c: mono_get_inflated_method() is obsolete,
+	removed.
+
+2007-07-15  Zoltan Varga  <vargaz@gmail.com>
+
+	* mini-amd64.c (mono_arch_build_imt_thunk): Remove the non-32bit MonoMethod
+	assert. Should fix #82103.
+
+2007-07-14  Zoltan Varga  <vargaz@gmail.com>
+
+	* mini-exceptions.c (mono_jit_walk_stack_from_ctx): Use MONO_CONTEXT_GET_SP ()
+	here too. Fixes #82095.
+
+	* mini-amd64.c (mono_arch_build_imt_thunk): Add support for non-32bit MonoMethod
+	addresses.
+
+	* mini-amd64.c (mono_arch_get_vcall_slot_addr): Add a couple asserts.
+
+	* mini-amd64.h: Enable IMT for amd64.
+	
+	* mini-amd64.c (mono_arch_build_imt_thunk): Optimize IMT thunk size.
+
+2007-07-12  Zoltan Varga  <vargaz@gmail.com>
+
+	* mini-amd64.c (mono_arch_get_vcall_slot_addr): Add support for IMT call sequences.
+
+2007-07-12  Mark Probst  <mark.probst@gmail.com>
+
+	* mini.c (check_linkdemand, mono_method_to_ir): Abort compilation
+	as soon as check_linkdemand sets an exception_type.
+
+Thu Jul 12 12:18:22 CEST 2007 Paolo Molaro <lupus@ximian.com>
+
+	* mini-x86.c: fixed offsets for IMT call sequence.
+	* mini-x86.h: enable IMT again.
+
+2007-07-11  Zoltan Varga  <vargaz@gmail.com>
+
+	* trace.c (mono_trace_enter_method): Decode MonoType too.
+
+	* mini-amd64.c (mono_arch_get_vcall_slot_addr): Handle signed displacements too.
+
+	* mini.h mini-x86.h mini-trampolines.c: Change the signature of mono_arch_find_imt_method () to pass the calling code address too.
+
+	* mini-amd64.c: Add preliminary IMT implementation.
+	
+Wed Jul 11 18:21:30 CEST 2007 Paolo Molaro <lupus@ximian.com>
+
+	* mini-x86.c: adjusted mono_arch_get_vcall_slot_addr () to
+	understand the new IMT-base interface invocation (thanks to
+	Daniel Nauck for the report and the remote debugging session).
+
+Wed Jul 11 14:54:39 CEST 2007 Paolo Molaro <lupus@ximian.com>
+
+	* mini-x86.c: size and speed optimizations for the IMT bsearch.
+
+2007-07-11  Zoltan Varga  <vargaz@gmail.com>
+
+	* Makefile.am (aotcheck): Make this actually use the AOTed code.
+
+Wed Jul 11 12:41:32 CEST 2007 Paolo Molaro <lupus@ximian.com>
+
+	* mini-trampolines.c: implement AOT IMT support.
+	* mini-x86.h: enable IMT support for wider testing.
+
+2007-07-10  Zoltan Varga  <vargaz@gmail.com>
+
+	* inssel.brg (emit_imt_argument): Add aot support here.
+
+	* aot-runtime.c (decode_patch_info): Fix reading of MONO_PATCH_INFO_METHOD.
+
+Tue Jul 10 17:50:58 CEST 2007 Paolo Molaro <lupus@ximian.com>
+
+	* mini-x86.c, mini-x86.h, tramp-x86.c: x86 arch-specific changes
+	of the IMT implementation, partially from massi, with my
+	implementation of the bsearch sequence. Disabled by default until
+	the AOT code is implemented.
+
+2007-07-10  Zoltan Varga  <vargaz@gmail.com>
+
+	* cpu-x86.md: The source argument of sext_i1/i2 must by a byte reg.
+
+	* inssel-x86.brg: Add reg:ldind.i1(regvar) rules. Fixes #82056.
+
+Tue Jul 10 17:33:12 CEST 2007 Paolo Molaro <lupus@ximian.com>
+
+	* inssel.brg, mini.c, mini.h, mini-trampolines.c:
+	arch-independent IMT JIT code from Massimiliano
+	Mantione (massi@ximian.com) with small cleanups from me.
+
+Tue Jul 10 13:07:24 CEST 2007 Paolo Molaro <lupus@ximian.com>
+
+	* Makefile.am: fix svn invocation to get the svn revision to be
+	independent of the local language (build fix).
+
+2007-07-09  Mark Probst  <mark.probst@gmail.com>
+
+	* mini.c (inline_method): Reset cfg->exception_type if the
+	inlining is aborted.  Fixes: 82049.
+
+Mon Jul 9 17:26:47 CEST 2007 Paolo Molaro <lupus@ximian.com>
+
+	* mini.c: remove assert from exception handling code when exception_ptr
+	is not set.
+
+2007-07-05  Zoltan Varga  <vargaz@gmail.com>
+
+	* mini.c (mono_codegen): Add an assert.
+
+	* mini-x86.c (mono_arch_emit_prolog): Allocate space for the profiler method 
+	enter and leave code.
+	* mini-amd64.c (mono_arch_emit_prolog): Likewise.
+
+Thu Jul 5 20:12:52 CEST 2007 Paolo Molaro <lupus@ximian.com>
+
+	* mini-ppc.c: fixed memory corruption for localloc(0)
+	(bug #81852).
+
+2007-07-05  Zoltan Varga  <vargaz@gmail.com>
+	
+	* mini.c: Fix warnings.
+
+Wed Jul 4 15:30:36 CEST 2007 Paolo Molaro <lupus@ximian.com>
+
+	* optflags-def.h, mini-x86.c: added sse2 optimization flag and use it
+	to emit better double->int conversions.
+
+Tue Jul 3 19:42:16 CEST 2007 Paolo Molaro <lupus@ximian.com>
+
+	* mini.c: the provided Min/Max optimizations are valid for unisgned
+	ints.
+
+2007-07-03  Rodrigo Kumpera  <rkumpera@novell.com>
+
+	* mini.c (can_access_method, can_access_field): methods moved to metadata/class.c and renamed to mono_method_can_access_method and mono_method_can_acesss_field
+
+2007-06-28  Miguel de Icaza  <miguel@novell.com>
+
+	* mini.c (mono_running_on_valgrind): Add support for reporting the
+	method and  its boundaries to valgrind.
+
+2007-06-28  Martin Baulig  <martin@ximian.com>
+
+	* debug-debugger.h (MonoDebuggerInfo): Added `debugger_version'.
+
+2007-06-25  Zoltan Varga  <vargaz@gmail.com>
+
+	* ssa.c (visit_inst): Add support for OP_BR. Fixes #81946.
+
+	* generic.2.cs: Add new test case.
+
 2007-06-25  Martin Baulig  <martin@ximian.com>
 
 	Merged the `debugger-dublin' branch.
