--- a/runtime/arch/ChangeLog
+++ b/runtime/arch/ChangeLog
@@ -1,3 +1,11 @@
+2007-07-14  Zoltan Varga  <vargaz@gmail.com>
+
+	* amd64/amd64-codegen.h: Remove some unused rex prefixes.
+
+Wed Jul 4 15:29:07 CEST 2007 Paolo Molaro <lupus@ximian.com>
+
+	* x86/x86-codegen.h: added minimal sse instructions currently
+	needed by the JIT.
 
 2007-06-13  Randolph Chung  <tausq@debian.org>
 
