--- a/runtime/tests/ChangeLog
+++ b/runtime/tests/ChangeLog
@@ -1,3 +1,47 @@
+2007-07-26  Rodrigo Kumpera  <rkumpera@novell.com>
+
+	* Makefile.am: Added enum_types.il.
+	* enum_types.il: Test for all valid primitive types an enum basefield can have.
+
+2007-07-25  Jonathan Chambers  <joncham@gmail.com>
+
+	* Makefile.am: Added transparentproxy.cs.
+	* transparentproxy.cs: Add tests for transparentproxy
+	interface/casting.
+	
+	Code is contributed under MIT/X11 license.
+
+2007-07-20  Raja R Harinath  <rharinath@novell.com>
+
+	* Makefile.am (bug-81691.exe): Create it in the builddir.
+
+2007-07-19  Mark Probst  <mark.probst@gmail.com>
+
+	* Makefile.am (test-bug-81691), bug-81691.cs, bug-81691-a.cs,
+	bug-81691-b.cs: Test for bug #81691.
+
+2007-07-11  Raja R Harinath  <rharinath@novell.com>
+
+	* Makefile.am (bug-81673.exe): Look for bug-81673.cs in $(srcdir).
+
+2007-07-10  Rodrigo Kumpera  <rkumpera@novell.com>
+
+	* Makefile.am, bug-82020.il: Test for bug #82020
+
+2007-07-10  Zoltan Varga  <vargaz@gmail.com>
+
+	* libtest.c (mono_test_marshal_return_unicode_string_delegate): 
+	Add a missing return.
+
+2007-07-09  Mark Probst  <mark.probst@gmail.com>
+
+	* Makefile.am (test-bug-81673), bug-81673.cs,
+	bug-81673-interface.cs: Test for bug 81673.
+
+2007-07-05  Zoltan Varga  <vargaz@gmail.com>
+
+	* pinvoke3.cs libtest.c: Add new test for returning unicode strings from a delegate.
+
 2007-06-12  Zoltan Varga  <vargaz@gmail.com>
 
 	* pinvoke2.cs: Add test for instance delegates.
