--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-08-01  Martin Baulig  <martin@ximian.com>
 
+	* configure.in: Make sure the runtime is recent enough.
+
+2007-08-01  Martin Baulig  <martin@ximian.com>
+
 	* configure.in: Bump version number to 0.55.
 
 2007-08-01  Martin Baulig  <martin@ximian.com>
