--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2007-08-06  Martin Baulig  <martin@ximian.com>
+
+	* backend/TargetMemoryAccess.cs
+	(TargetMemoryAccess.InsertBreakpoint): Make this internal.
+	(TargetMemoryAccess.RemoveBreakpoint): Likewise.
+
+	* classes/AddressBreakpoint.cs
+	(AddressBreakpoint): Use `AddressBreakpointHandle'.
+
 2007-08-01  Martin Baulig  <martin@ximian.com>
 
 	* configure.in: Make sure the runtime is recent enough.
