--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-08-23  Martin Baulig  <martin@ximian.com>
+
+	* test/src/IHelloInterface.cs: New file.
+	* test/src/TestAppDomain-Hello.cs: New file.
+	* test/src/TestAppDomain-Module.cs: New file.
+
+	* test/testsuite/TestAppDomain-Module.cs: New test.
+
 2007-08-22  Martin Baulig  <martin@ximian.com>
 
 	* backend/arch/Bfd.cs
