--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-08-24  Wade Berrier  <wberrier@novell.com>
+
+	* backend/Makefile.am: Glob .cs for EXTRA_DIST so these don't
+	need updating anymore.
+
 2007-08-23  Martin Baulig  <martin@ximian.com>
 
 	* test/src/IHelloInterface.cs: New file.
