2007-09-03  Martin Baulig  <martin@ximian.com>
	* frontend/Command.cs
	(SteppingCommand.DoExecute): Only switch threads if the new thread
	is alive.


svn path=/trunk/debugger/; revision=85228

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-09-03  Martin Baulig  <martin@ximian.com>
 
+	* frontend/Interpreter.cs
+	(Interpreter.WaitAll): Don't stop if another than the current
+	thread exited.
+
+2007-09-03  Martin Baulig  <martin@ximian.com>
+
 	* frontend/Command.cs
 	(SteppingCommand.DoExecute): Only switch threads if the new thread
 	is alive.
